--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,8 +4,10 @@
     padding : 50px 0;
   }
   
-  .container{background:#D3D3D3; border-radius: 10px; width: 40%; height: 40%;}
+  .container{background:#101820ff; border-radius: 10px; width: 40%; height: 40%;}
   .login-sec{padding: 50px 30px; position:relative;}
-  .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #0069c0;}
-  .login-sec h2:after{content:" "; width:100px; height:5px; background:#6ec6ff; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
-  .btn-login{background: #0069c0; color:#fff; font-weight:600;}
+  .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #f2aa4cff;}
+  .login-sec h2:after{content:" "; width:100px; height:5px; background:#fff; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
+  .btn-login{background: #414141; color:#f2aa4cff; font-weight:600;}
+  .text-uppercase{color: #f2aa4cff;}
+  .form-group{color: #f2aa4cff;}
